Add service skeleton
